--- a/cam_alu/xcelium.d/history
+++ b/cam_alu/xcelium.d/history
@@ -101,3 +101,4 @@ s96::(06Nov2021:23:54:10):( xrun -64bit -gui -access r test/alu_tb.v test/alu_1b
 s97::(06Nov2021:23:54:24):( xrun -64bit -gui -access r test/alu_tb.v test/alu_1b_tb.v src/alu_1b.v src/add_1b.v src/add.v src/alu.v src/mux_8t1_32.v src/mux_8t1.v src/sll.v src/slt.v src/sub.v src/sub_1b.v src/srl.v lib/and_gate_32.v lib/and_gate.v lib/mux_32.v lib/mux.v lib/nor_gate.v lib/not_gate_32.v lib/not_gate.v lib/or_gate_32.v lib/or_gate.v lib/xor_gate_32.v lib/xor_gate.v lib/nand_gate.v )
 s98::(06Nov2021:23:54:49):( xrun -64bit -gui -access r test/alu_tb.v test/alu_1b_tb.v src/alu_1b.v src/add_1b.v src/add.v src/alu.v src/mux_8t1_32.v src/mux_8t1.v src/sll.v src/slt.v src/sub.v src/sub_1b.v src/srl.v lib/and_gate_32.v lib/and_gate.v lib/mux_32.v lib/mux.v lib/nor_gate.v lib/not_gate_32.v lib/not_gate.v lib/or_gate_32.v lib/or_gate.v lib/xor_gate_32.v lib/xor_gate.v lib/nand_gate.v )
 s99::(07Nov2021:17:17:14):( xrun -64bit -gui -access r test/alu_tb.v test/alu_1b_tb.v src/alu_1b.v src/add_1b.v src/add.v src/alu.v src/mux_8t1_32.v src/mux_8t1.v src/sll.v src/slt.v src/sub.v src/sub_1b.v src/srl.v lib/and_gate_32.v lib/and_gate.v lib/mux_32.v lib/mux.v lib/nor_gate.v lib/not_gate_32.v lib/not_gate.v lib/or_gate_32.v lib/or_gate.v lib/xor_gate_32.v lib/xor_gate.v lib/nand_gate.v )
+s100::(11Nov2021:20:00:55):( xrun -64bit -gui -access r test/alu_tb.v test/alu_1b_tb.v src/alu_1b.v src/add_1b.v src/add.v src/alu.v src/mux_8t1_32.v src/mux_8t1.v src/sll.v src/slt.v src/sub.v src/sub_1b.v src/srl.v lib/and_gate_32.v lib/and_gate.v lib/mux_32.v lib/mux.v lib/nor_gate.v lib/not_gate_32.v lib/not_gate.v lib/or_gate_32.v lib/or_gate.v lib/xor_gate_32.v lib/xor_gate.v lib/nand_gate.v )
